<resources>
    <string name="app_name">TaskWan</string>
    <string name="app_logo">Task-Wan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_login_with">Or Login with</string>
    <string name="or_register_with">Or Register with</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create your account</string>
    <string name="google_login">Google Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="management_app">Management App</string>
    <string name="previous">previous</string>
    <string name="please_enter_the_verification_number_we_send_to_your_email">Please enter the verification number we send to your email</string>
    <string name="don_t_receive_a_code">Don\'t receive a code?</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="your_account_has_been_verified_successfully">Your Account has been Verified Successfully!</string>
    <string name="verify_account">Verify Account</string>
    <string name="resend">Resend</string>
</resources>