<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:paddingHorizontal="20dp">

            <ImageButton
                android:id="@+id/previous_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/all_corners"
                android:contentDescription="@string/previous"
                android:src="@drawable/previous"
                android:visibility="gone" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textFontWeight="700"
                android:textSize="30sp"
                android:textColor="@color/primary_1000"
                android:text="@string/app_logo"
                android:fontFamily="@font/righteous"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/management_app"
                android:textFontWeight="400"
                android:paddingVertical="10dp"
                android:fontFamily="@font/poppins_400"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- res/layout/example_activity.xml -->
        <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.example.taskwan.LoginForm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>