<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_account"
            android:fontFamily="@font/poppins_500"
            android:textSize="14sp"
            android:textColor="@color/black_900"
            android:textAlignment="center"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="36dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/verify_account"
                android:contentDescription="@string/verify_account" />
        </LinearLayout>

        <TextView
            android:layout_width="224dp"
            android:maxWidth="224dp"
            android:layout_marginBottom="60dp"
            android:textSize="12sp"
            android:textColor="@color/black_900"
            android:fontFamily="@font/poppins_500"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_verification_number_we_send_to_your_email"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="52dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:inputType="number"
                        android:background="@color/white_000" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/primary_1000" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:inputType="number"
                        android:background="@color/white_000" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/primary_1000" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:inputType="number"
                        android:background="@color/white_000" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/primary_1000" />
                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:autofillHints="1"
                        android:inputType="number"
                        android:background="@color/white_000" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/primary_1000" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_receive_a_code"
                    android:fontFamily="@font/poppins_400"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/resend"
                    android:fontFamily="@font/poppins_400"
                    android:textSize="10sp"
                    android:textColor="@color/primary_1000" />

            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:background="@drawable/all_corners"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:fontFamily="@font/poppins_400"
            android:textAllCaps="false"
            android:layout_gravity="center" />
    </LinearLayout>
</FrameLayout>