<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login  to your account"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_500"
            android:paddingBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="16dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/input_icon_border"
                    android:src="@drawable/mail"

                    />

                <EditText
                    android:background="@drawable/input_border"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/gray"
                    android:layout_height="48dp"
                    android:hint="Email"
                    android:paddingHorizontal="16dp"
                    android:textColor="#9a9a9a" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="16dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/input_icon_border"
                    android:src="@drawable/lock"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="Password"
                    android:textColorHint="@color/gray"
                    android:paddingHorizontal="16dp"
                    android:textColor="#9a9a9a"
                    android:background="@drawable/input_border"
                    android:inputType="textVisiblePassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary_500"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="345dp"
                android:layout_height="50dp"
                android:background="@drawable/all_corners"
                android:textColor="@color/white"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:layout_gravity="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="6"
                    android:background="@color/primary_1000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="6dp"
                    android:text="@string/or_login_with"
                    android:textColor="#474747"
                    android:textAlignment="center" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="6"
                    android:background="@color/primary_1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/google_icon"
                    android:background="@drawable/icon_border"
                    android:contentDescription="Facebook Login" />

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp" />

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/facebook_icon"
                    android:background="@drawable/icon_border"
                    android:contentDescription="@string/facebook_login" />

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp" />

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/twitter_icon"
                    android:background="@drawable/icon_border"
                    android:contentDescription="@string/twitter_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Don't have an account? " />

                <TextView
                    android:id="@+id/signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textColor="@color/primary_1000"
                    android:textStyle="" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>